Fix amend navbar covering headings for medium screens and up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,4 +99,8 @@ ol li {
     #navbar-brand {
         padding-left: 20vw;
     }
+
+    h2 {
+        padding-top: 4rem;
+    }
 }
